--- a/impressum.html
+++ b/impressum.html
@@ -19,7 +19,7 @@ Nancystraße 20
 </tr>
 <tr>
 <td>E-Mail:</td>
-<td>mail@funkenstrahlen.de</td>
+<td><div id="meltmail"></div></td>
 </tr>
 </tbody>
 </table>
