--- a/impressum.html
+++ b/impressum.html
@@ -8,8 +8,8 @@
 
 <h2>Angaben gemäß § 5 TMG:</h2>
 Stefan Trauth
-Nancystraße 20
-76187 Karlsruhe
+Alte Rathausstraße 15
+76467 Bietigheim
 <h2>Kontakt:</h2>
 <table>
 <tbody>
@@ -25,8 +25,8 @@ Nancystraße 20
 </table>
 <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h2>
 Stefan Trauth
-Nancystraße 20
-76187 Karlsruhe
+Alte Rathausstraße 15
+76467 Bietigheim
 <h2>Quellenangaben für die verwendeten Bilder und Grafiken:</h2>
 Alle verwendeten Fotos stammen von pixabay.com und stehen unter einer Creative Commons CC0 Lizenz.
 
