--- a/index.html
+++ b/index.html
@@ -1,3 +1,101 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Stefan Trauth">
+    <meta name="author" content="Stefan Trauth">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
+
+    <title>Stefan Trauth</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="jumbotron-narrow.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation"><a href="#">Kontakt</a></li>
+          </ul>
+        </nav>
+        <h3>Stefan Trauth <small>Coder, Blogger, Podcaster</small></h3>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <h1>Wer ich bin?</h1>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <h1>Ich schreibe ins Netz</h1>
+          <p>Ich betreibe ein kleines Blog, auf dem ich über Technik, Kultur, Politik und Gesellschaft schreibe. Hin und wieder finden sich dort Links auf spannende Dinge im Web, die mir so über den Weg laufen.</p>
+          <a href="#" class="btn btn-large btn-primary" role="button">Blog ansehen</a>
+        </div>
+      </div>
+      
+      <div class="row">
+        <div class="col-sm-12">
+          <h1>Ich sende ins Netz</h1>
+
+          <h3>Funkenstrahlen Podcast</h3>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <a href="#" class="btn btn-large btn-primary" role="button">Zum Funkenstrahlen Podcast</a>
+
+
+          <h3>Kondensator Podcast</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus sint, quis, autem eligendi repellat magnam, tempora consequuntur quos modi iste debitis, repudiandae blanditiis ullam in distinctio voluptates odio omnis vel.</p>
+          <a href="#" class="btn btn-large btn-primary" role="button">Zum Kondensator Podcast</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <h1>Ich entwickle Apps</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus necessitatibus harum eos ratione omnis, repellat laudantium! Rem fuga accusantium laboriosam culpa quisquam praesentium est, nisi quos nam perspiciatis incidunt quidem?</p>
+
+          <h3>Xenim</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim harum totam maxime aliquam corporis commodi, excepturi, numquam est nam dolor laudantium culpa voluptatem blanditiis assumenda voluptatibus distinctio amet ad eos!</p>
+
+          <h3>Review</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero veritatis ad, at consequatur numquam rem? Ea officia voluptatibus, ab distinctio dolore harum reiciendis! Soluta possimus ipsa expedita odio veritatis minus?</p>
+
+          <h3>Skoon</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero veritatis ad, at consequatur numquam rem? Ea officia voluptatibus, ab distinctio dolore harum reiciendis! Soluta possimus ipsa expedita odio veritatis minus?</p>
+
+          <h3>Podlive</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero veritatis ad, at consequatur numquam rem? Ea officia voluptatibus, ab distinctio dolore harum reiciendis! Soluta possimus ipsa expedita odio veritatis minus?</p>          
+        </div>
+      </div>
+
+      <footer class="footer">
+        <p>&copy; 2017 Stefan Trauth, <a href="">Impressum</a></p>
+      </footer>
+
+    </div> <!-- /container -->
+
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="ie10-viewport-bug-workaround.js"></script>
+  </body>
+</html>
