--- a/site/impressum.html
+++ b/site/impressum.html
@@ -7,8 +7,8 @@
 <body>
 
 <h2>Angaben gemäß § 5 TMG:</h2>
-Stefan Trauth
-Alte Rathausstraße 15
+Stefan Trauth,
+Alte Rathausstraße 15,
 76467 Bietigheim
 <h2>Kontakt:</h2>
 <table>
@@ -24,14 +24,9 @@ Alte Rathausstraße 15
 </tbody>
 </table>
 <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h2>
-Stefan Trauth
-Alte Rathausstraße 15
+Stefan Trauth,
+Alte Rathausstraße 15,
 76467 Bietigheim
-<h2>Quellenangaben für die verwendeten Bilder und Grafiken:</h2>
-Alle verwendeten Fotos stammen von pixabay.com und stehen unter einer Creative Commons CC0 Lizenz.
-
-<a href="https://creativecommons.org/publicdomain/zero/1.0/deed.en">https://creativecommons.org/publicdomain/zero/1.0/deed.en</a>
-
 <h1>Haftungsausschluss (Disclaimer)</h1>
 <strong>Haftung für Inhalte</strong>
 
