--- a/site/index.html
+++ b/site/index.html
@@ -79,7 +79,7 @@
             </svg>
           </div>
           <h3>UI/UX Designer</h3>
-          <p>I'm a freelance UI/UX design consultant with 6+ years of experience in digital design. I love designing simple and consistent web &amp; mobile interfaces.</p>
+          <p>Ich beschäftige mich intensiv damit wie Apps intuitiv und einfach verständlich gestaltet werden können.</p>
         </div>
       </div>
 
@@ -96,7 +96,7 @@
             </svg>
           </div>
           <h3>Apple Developer</h3>
-          <p>I like coding my own designs. I implement using HTML, CSS and basic Javascript. Recently, I'm using frameworks like Bootstrap, MDL &amp; MDC.</p>
+          <p>Ich entwickle seit mehreren Jahren Apps für alle Apple Plattformen. Ich arbeite bevorzugt mit Swift, kann aber auch ObjC Code lesen. Im Backend habe ich Erfahrung mit Ruby on Rails, Django oder Parse. <a href="index.html#work">Einige meiner Apps sind hier unter Projekte aufgeführt</a>.</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
@@ -116,7 +116,7 @@
             </svg>
           </div>
           <h3>Blog</h3>
-          <p>I coach design and front-end development at <a class="text-link" href="https://www.lewagon.com" target="_blank">Le Wagon</a> coding bootcamp in 5+ cities like Amsterdam, Brussels, Copenhagen &amp; Barcelona.</p>
+          <p>Ich interessiere mich für ein breites Spektrum an Themen von Politik bis zu Details von Programmiersprachen. Wenn mir ein Thema wichtig ist, <a href="https://funkenstrahlen.de">schreibe ich darüber in meinem Blog</a>.</p>
         </div>
       </div>
 
@@ -133,7 +133,7 @@
             </svg>
           </div>
           <h3>Podcaster</h3>
-          <p>I regularly speak at international conferences about topics like UI/UX, progressive web apps and design-development collaboration.</p>
+          <p>Podcasts sind meine Leidenschaft. Ich höre unglaublich viele Podcasts, um mich über eine vielzahl an Themen zu informieren. Seit einiger Zeit produziere ich auch selbst Podcasts: <a href="https://kondensator.podigee.io">Der Kondensator Podcast</a> informiert über Neuigkeiten aus der Podcastwelt. <a href="https://podcast.funkenstrahlen.de">Der Funkenstrahlen Podcast</a> widmet sich spannenden Themen aus dem Netz.</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
@@ -162,7 +162,7 @@
                 <div class="card-tag text-sm">UI/UX</div>
                 <div class="card-tag text-sm">Branding</div>
               </div>
-              <h4>Laravel Angular Material</h4>
+              <h4>Skoon</h4>
             </div>
           </a>
         </div>
@@ -178,7 +178,7 @@
                 <div class="card-tag text-sm">Branding</div>
                 <div class="card-tag text-sm">Mobile web</div>
               </div>
-              <h4>iON Social</h4>
+              <h4>Review</h4>
             </div>
           </div>
         </a>
@@ -199,7 +199,7 @@
                 <div class="card-tag text-sm">HTML/CSS</div>
                 <div class="card-tag text-sm">Mobile web</div>
               </div>
-              <h4>Travel Web App</h4>
+              <h4>Xenim</h4>
             </div>
           </a>
         </div>
@@ -214,7 +214,7 @@
                 <div class="card-tag text-sm">UI/UX</div>
                 <div class="card-tag text-sm">Web app</div>
               </div>
-              <h4>Logistics &amp; Shipping</h4>
+              <h4>Podlive</h4>
             </div>
           </div>
         </a>
@@ -228,12 +228,9 @@
 <footer id="contact">
   <div class="footer-wrapper">
     <div class="footer-content">
-      <h1>Let's talk</h1>
-      <p>I'm always looking forward to new opportunities, <br> ping me if you got any. </p>
-      <a href="https://nicolesaidy.com/cdn-cgi/l/email-protection#cfa1a6aca0a3aabcaea6abb68fa8a2aea6a3e1aca0a2" class="text-link">
-        <img src="images/mail.svg" alt="Email" width="16px">
-        <span class="__cf_email__" data-cfemail="dcb2b5bfb3b0b9afbdb5b8a59cbbb1bdb5b0f2bfb3b1">[email&#160;protected]</span><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script>
-      </a>
+      <h1>Schreibe mir!</h1>
+      <p>Ich freue mich immer über eine Nachricht.</p>
+      <p id="meltmail"></p>
     </div>
   </div>
   <div class="footer-bottom">
@@ -245,10 +242,23 @@
       </div>
     </div>
     <div class="footer-label">
-      Designed &amp; coded with <span>❤</span> in Beirut.
+      <a href="impressum.html">Impressum</a>
     </div>
   </div>
 </footer>
 
-<script>/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/\>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script></body>
+<script type="text/javascript">
+    //<![CDATA[
+      var xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (xhttp.readyState == 4 && xhttp.status == 200) {
+          document.getElementById("meltmail").innerHTML = "<a href=\"mailto:" + xhttp.responseText + "\">" + xhttp.responseText + "</a>";
+        }
+      };
+      xhttp.open("GET", "/meltmail", true);
+      xhttp.send();
+    //]]>
+</script>
+
+</body>
 </html>
