--- a/site/impressum.html
+++ b/site/impressum.html
@@ -14,10 +14,6 @@ Alte Rathausstraße 15,
 <table>
 <tbody>
 <tr>
-<td>Telefon:</td>
-<td></td>
-</tr>
-<tr>
 <td>E-Mail:</td>
 <td><div id="meltmail"></div></td>
 </tr>
@@ -54,6 +50,19 @@ Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten d
 
 Sie haben jederzeit das Recht auf unentgeltliche Auskunft über Ihre gespeicherten personenbezogenen Daten, deren Herkunft und Empfänger und den Zweck der Datenverarbeitung sowie ein Recht auf Berichtigung, Sperrung oder Löschung dieser Daten. Hierzu sowie zu weiteren Fragen zum Thema personenbezogene Daten können Sie sich jederzeit über die im Impressum angegeben Adresse des Webseitenbetreibers an uns wenden.
 
+
+<script type="text/javascript">
+    //<![CDATA[
+      var xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (xhttp.readyState == 4 && xhttp.status == 200) {
+          document.getElementById("meltmail").innerHTML = "<a href=\"mailto:" + xhttp.responseText + "\">" + xhttp.responseText + "</a>";
+        }
+      };
+      xhttp.open("GET", "/meltmail", true);
+      xhttp.send();
+    //]]>
+</script>
 
 </body>
 </html>
