--- a/site/index.html
+++ b/site/index.html
@@ -155,12 +155,13 @@
 
       <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <div class="card">
-          <a href="https://www.behance.net/gallery/33978864/Laravel-Angular-Material-Starter-Landing-Page" target="_blank">
-            <div class="card-img" style='background-image: url("images/laravelangular.jpg");'></div>
+          <a href="https://skoon.stefantrauth.de" target="_blank">
+            <div class="card-img" style='background-image: url("images/skoon-app-mockup.jpg");'></div>
             <div class="card-content">
               <div class="card-tags">
                 <div class="card-tag text-sm">UI/UX</div>
-                <div class="card-tag text-sm">Branding</div>
+                <div class="card-tag text-sm">Swift</div>
+                <div class="card-tag text-sm">iOS</div>
               </div>
               <h4>Skoon</h4>
             </div>
@@ -170,13 +171,14 @@
 
       <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <div class="card">
-          <a href="https://www.behance.net/gallery/49944637/ionSocial-Mobile-app" target="_blank">
-            <div class="card-img"  style='background-image: url("images/ionsocial.jpg");'></div>
+          <a href="https://reviewapp.stefantrauth.de" target="_blank">
+            <div class="card-img"  style='background-image: url("images/review-app-mockup.jpg");'></div>
             <div class="card-content">
               <div class="card-tags">
                 <div class="card-tag text-sm">UI/UX</div>
-                <div class="card-tag text-sm">Branding</div>
-                <div class="card-tag text-sm">Mobile web</div>
+                <div class="card-tag text-sm">Swift</div>
+                <div class="card-tag text-sm">iOS</div>
+                <div class="card-tag text-sm">Apple Watch</div>
               </div>
               <h4>Review</h4>
             </div>
@@ -191,13 +193,14 @@
 
       <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <div class="card">
-          <a href="https://www.behance.net/gallery/49944771/Progressive-Web-App-Travel-App-(in-progress)" target="_blank">
-            <div class="card-img" style='background-image: url("images/pwa.jpg");'></div>
+          <a href="https://xenimapp.stefantrauth.de" target="_blank">
+            <div class="card-img" style='background-image: url("images/xenim-app-mockup.jpg");'></div>
             <div class="card-content">
               <div class="card-tags">
                 <div class="card-tag text-sm">UI/UX</div>
-                <div class="card-tag text-sm">HTML/CSS</div>
-                <div class="card-tag text-sm">Mobile web</div>
+                <div class="card-tag text-sm">Swift</div>
+                <div class="card-tag text-sm">iOS</div>
+                <div class="card-tag text-sm">Parse Backend</div>
               </div>
               <h4>Xenim</h4>
             </div>
@@ -207,12 +210,11 @@
 
       <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
         <div class="card">
-          <a href="https://www.behance.net/gallery/34001272/Logistics-Shipping-Web-App" target="_blank">
-            <div class="card-img" style='background-image: url("images/shipping.jpg");'></div>
+          <a href="" target="_blank">
+            <div class="card-img" style='background-image: url("images/");'></div>
             <div class="card-content">
               <div class="card-tags">
-                <div class="card-tag text-sm">UI/UX</div>
-                <div class="card-tag text-sm">Web app</div>
+                <div class="card-tag text-sm">Coming Soon</div>
               </div>
               <h4>Podlive</h4>
             </div>
