--- a/site/index.html
+++ b/site/index.html
@@ -96,7 +96,7 @@
             </svg>
           </div>
           <h3>Apple Developer</h3>
-          <p>Ich entwickle seit mehreren Jahren Apps für alle Apple Plattformen. Ich arbeite bevorzugt mit Swift, kann aber auch ObjC Code lesen. Im Backend habe ich Erfahrung mit Ruby on Rails, Django oder Parse. <a href="index.html#work">Einige meiner Apps sind hier unter Projekte aufgeführt</a>.</p>
+          <p>Ich entwickle seit mehreren Jahren Apps für alle Apple Plattformen. Ich arbeite bevorzugt mit Swift. Im Backend habe ich Erfahrung mit Ruby on Rails, Django oder Parse. <a href="index.html#work">Einige meiner Apps sind hier aufgeführt</a>.</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
@@ -230,7 +230,7 @@
 <footer id="contact">
   <div class="footer-wrapper">
     <div class="footer-content">
-      <h1>Schreibe mir!</h1>
+      <h1>Noch Fragen?</h1>
       <p>Ich freue mich immer über eine Nachricht.</p>
       <p id="meltmail"></p>
     </div>
