--- a/site/index.html
+++ b/site/index.html
@@ -22,7 +22,6 @@
         <div class="navbar-grid">
           <div class="navbar">
             <a href="index.html#about" id="link-about" class="navbar-link">About</a>
-            <a href="index.html#work" id ="link-work" class="navbar-link">Projekte</a>
             <a href="index.html#contact" id="link-contact" class="btn-primary-sm">Kontakt</a>
           </div>
         </div>
@@ -96,7 +95,7 @@
             </svg>
           </div>
           <h3>Apple Developer</h3>
-          <p>Ich entwickle seit mehreren Jahren Apps für alle Apple Plattformen. Ich arbeite bevorzugt mit Swift. Im Backend habe ich Erfahrung mit Ruby on Rails, Django oder Parse. <a href="index.html#work">Einige meiner Apps sind hier aufgeführt</a>.</p>
+          <p>Ich entwickle seit mehreren Jahren Apps für alle Apple Plattformen. Ich arbeite bevorzugt mit Swift. <a href="https://itunes.apple.com/de/developer/stefan-trauth/id1073103749?mt=8">Einige meiner Apps sind hier aufgeführt</a>.</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
@@ -140,102 +139,16 @@
     </div>
   </div>
 
-  <div id="work" class="work-wrapper">
-
-    <div class="mdc-layout-grid max-width">
-      <div class="mdc-layout-grid__cell--span-2"></div>
-      <div class="mdc-layout-grid__cell--span-8">
-        <h2>Projekte</h2>
-      </div>
-      <div class="mdc-layout-grid__cell--span-2"></div>
-    </div>
-
-    <div class="mdc-layout-grid max-width">
-      <div class="mdc-layout-grid__cell--span-2"></div>
-
-      <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <div class="card">
-          <a href="https://skoon.stefantrauth.de" target="_blank">
-            <div class="card-img" style='background-image: url("images/skoon-app-mockup.jpg");'></div>
-            <div class="card-content">
-              <div class="card-tags">
-                <div class="card-tag text-sm">UI/UX</div>
-                <div class="card-tag text-sm">Swift</div>
-                <div class="card-tag text-sm">iOS</div>
-              </div>
-              <h4>Skoon</h4>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <div class="card">
-          <a href="https://reviewapp.stefantrauth.de" target="_blank">
-            <div class="card-img"  style='background-image: url("images/review-app-mockup.jpg");'></div>
-            <div class="card-content">
-              <div class="card-tags">
-                <div class="card-tag text-sm">UI/UX</div>
-                <div class="card-tag text-sm">Swift</div>
-                <div class="card-tag text-sm">iOS</div>
-                <div class="card-tag text-sm">Apple Watch</div>
-              </div>
-              <h4>Review</h4>
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="mdc-layout-grid__cell--span-2"></div>
-    </div>
-    <div class="mdc-layout-grid max-width">
-      <div class="mdc-layout-grid__cell--span-2"></div>
-
-      <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <div class="card">
-          <a href="https://xenimapp.stefantrauth.de" target="_blank">
-            <div class="card-img" style='background-image: url("images/xenim-app-mockup.jpg");'></div>
-            <div class="card-content">
-              <div class="card-tags">
-                <div class="card-tag text-sm">UI/UX</div>
-                <div class="card-tag text-sm">Swift</div>
-                <div class="card-tag text-sm">iOS</div>
-                <div class="card-tag text-sm">Parse Backend</div>
-              </div>
-              <h4>Xenim</h4>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
-        <div class="card">
-          <a href="" target="_blank">
-            <div class="card-img" style='background-image: url("images/");'></div>
-            <div class="card-content">
-              <div class="card-tags">
-                <div class="card-tag text-sm">Coming Soon</div>
-              </div>
-              <h4>Podlive</h4>
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="mdc-layout-grid__cell--span-2"></div>
-    </div>
-  </div>
-</div>
-
 <footer id="contact">
   <div class="footer-wrapper">
     <div class="footer-content">
       <h1>Noch Fragen?</h1>
-      <p>Ich freue mich immer über eine Nachricht.</p>
+      <p>Ich freue mich immer über eine Nachricht!</p>
       <p id="meltmail"></p>
+      <p>Das ist eine temporäre Mailadresse, um Spam zu vermeiden. Sie funktioniert nur heute. Sobald ein Kontakt mit mir zu Stande kommt, erhälst du natürlich eine dauerhafte Mailadresse von mir.</p>
     </div>
   </div>
-  <div class="footer-bottom">
+<!--   <div class="footer-bottom">
     <div class="footer-icons">
       <div>
         <a target="_blank" href="https://twitter.com/funkenstrahlen" class="footer-icon">
@@ -246,7 +159,7 @@
     <div class="footer-label">
       <a href="impressum.html">Impressum</a>
     </div>
-  </div>
+  </div> -->
 </footer>
 
 <script type="text/javascript">
