contact navbar link should not look like selected

--- a/site/index.html
+++ b/site/index.html
@@ -22,7 +22,7 @@
         <div class="navbar-grid">
           <div class="navbar">
             <a href="index.html#about" id="link-about" class="navbar-link">About</a>
-            <a href="index.html#contact" id="link-contact" class="btn-primary-sm">Kontakt</a>
+            <a href="index.html#contact" id="link-contact" class="navbar-link">Kontakt</a>
           </div>
         </div>
       </div>
