remove funkenstrahlen podcast reference

--- a/site/index.html
+++ b/site/index.html
@@ -132,7 +132,7 @@
             </svg>
           </div>
           <h3>Podcaster</h3>
-          <p>Podcasts sind meine Leidenschaft. Ich höre unglaublich viele Podcasts, um mich über eine vielzahl an Themen zu informieren. Seit einiger Zeit produziere ich auch selbst Podcasts: <a href="https://kondensator.podigee.io">Der Kondensator Podcast</a> informiert über Neuigkeiten aus der Podcastwelt. <a href="https://podcast.funkenstrahlen.de">Der Funkenstrahlen Podcast</a> widmet sich spannenden Themen aus dem Netz.</p>
+          <p>Podcasts sind meine Leidenschaft. Ich höre unglaublich viele Podcasts, um mich über eine vielzahl an Themen zu informieren. Seit einiger Zeit produziere ich auch selbst Podcasts: <a href="https://kondensator.podigee.io">Der Kondensator Podcast</a> informiert über Neuigkeiten aus der Podcastwelt.</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
