--- a/site/index.html
+++ b/site/index.html
@@ -148,7 +148,7 @@
       <p>Das ist eine temporäre Mailadresse, um Spam zu vermeiden. Sie funktioniert nur heute. Sobald ein Kontakt mit mir zu Stande kommt, erhälst du natürlich eine dauerhafte Mailadresse von mir.</p>
     </div>
   </div>
-<!--   <div class="footer-bottom">
+   <div class="footer-bottom">
     <div class="footer-icons">
       <div>
         <a target="_blank" href="https://twitter.com/funkenstrahlen" class="footer-icon">
@@ -159,7 +159,7 @@
     <div class="footer-label">
       <a href="impressum.html">Impressum</a>
     </div>
-  </div> -->
+  </div>
 </footer>
 
 <script type="text/javascript">
