--- a/site/pollen-forecast-privacy-policy.html
+++ b/site/pollen-forecast-privacy-policy.html
@@ -4,6 +4,11 @@
 		<meta name="viewport" content="width=device-width">
 		<meta name="viewport" content="initial-scale=1.0">
 		<meta charset="utf-8">
+        <style>
+            body {
+                font-family: -apple-system, system-ui, BlinkMacSystemFont;
+            }
+        </style>
 	</head>
 	<body>
 		<h1>Pollenflug Vorhersage Datenschutzerklärung</h1>
