--- a/site/index.html
+++ b/site/index.html
@@ -132,7 +132,7 @@
             </svg>
           </div>
           <h3>Podcaster</h3>
-          <p>Podcasts sind meine Leidenschaft. Ich höre unglaublich viele Podcasts, um mich über eine vielzahl an Themen zu informieren. Seit einiger Zeit produziere ich auch selbst Podcasts: <a href="https://kondensator.podigee.io">Der Kondensator Podcast</a> informiert über Neuigkeiten aus der Podcastwelt.</p>
+          <p>Podcasts sind meine Leidenschaft. Ich höre unglaublich viele Podcasts, um mich über eine vielzahl an Themen zu informieren. Seit einiger Zeit produziere ich auch selbst Podcasts: <a href="https://podcasts.apple.com/de/podcast/kondensator/id1155853611?mt=2&app=podcast">Der Kondensator Podcast</a> informiert über Neuigkeiten aus der Podcastwelt.</p>
         </div>
       </div>
       <div class="mdc-layout-grid__cell--span-2"></div>
