update pollen forecast privacy policy

--- a/site/pollen-forecast-privacy-policy.html
+++ b/site/pollen-forecast-privacy-policy.html
@@ -30,10 +30,17 @@
 
 		<p>Die iCloud Synchronisierung kann über die iOS Einstellungen deaktiviert werden.</p>
 
-		<h2>Prognose Abfrage beim Deutschen Wetterdienst</h2>
+		<h2>Pollen Prognose Abfrage beim Deutschen Wetterdienst</h2>
 		<p>Die Pollenflug Prognosedaten kommen direkt vom Server des Deutschen Wetterdienst. Daher werden zur Aktualisierung der Prognose Anfragen an den Server des DWD gesendet.</p>
 
 		<p>Abgefragt werden immer die Prognosedaten für alle Regionen in Deutschland. Die Abfragen sind nicht bezogen auf den aktuellen Standort. Die Filterung für die eigene Region findet lokal auf dem Gerät statt.</p>
+
+		<p>Technisch bedingt sieht der Server des Deutschen Wetterdienst die IP Adresse des anfragenden Gerätes.</p>
+
+        <h2>Wetter Prognose Abfrage beim Deutschen Wetterdienst</h2>
+		<p>Die Wetter Prognosedaten kommen direkt vom Server des Deutschen Wetterdienst. Daher werden zur Aktualisierung der Prognose Anfragen an den Server des DWD gesendet.</p>
+
+        <p>Auf dem Endgerät des Nutzers wird zunächst lokal die nächstgelegene Wetterstation ermittelt. Dann wird die Wetterprognose für diese Wetterstation beim Deutschen Wetterdienst abgerufen. Ein Rückschluss auf den exakten Standort des Nutzers ist damit nicht möglich.</p>
 
 		<p>Technisch bedingt sieht der Server des Deutschen Wetterdienst die IP Adresse des anfragenden Gerätes.</p>
 
