--- a/site/seibelseckle-privacy-policy.html
+++ b/site/seibelseckle-privacy-policy.html
@@ -18,11 +18,11 @@
 	</head>
 	<body>
 		<h1>Seibelseckle Datenschutzerklärung</h1>
-
 		<p>Datenschutz ist wichtig. Deshalb erfasst und verarbeitet die App nur Daten, die für die Funktionen unbedingt notwendig sind.</p>
-
-		<h2>Abruf der Wetterdaten</h2>
-		<p>Die Wetterdaten stammen von Dark Sky. Sie werden allerdings aus technischen Gründen auf seibelseckle.stefantrauth.de zwischengelagert und von dort aus an die App ausgeliefert. Dabei fällt dort technisch bedingt die IP Adresse an. Sie wird maximal 7 Tage gespeichert. Das letzte Byte der Adresse wird zur Anonymisierung entfernt.</p>
+        
+        <h2>Wetter Prognose Abfrage beim Deutschen Wetterdienst</h2>
+		<p>Die Wetter Prognosedaten kommen direkt vom Server des Deutschen Wetterdienst. Daher werden zur Aktualisierung der Prognose Anfragen an den Server des DWD gesendet.</p>
+		<p>Technisch bedingt sieht der Server des Deutschen Wetterdienst die IP Adresse des anfragenden Gerätes. Weitere Informationen werden nicht an den DWD übertragen. Es wird nur die Prognose für die Wetterstation der Hornisgrinde geladen.</p>
 
 		<h2>Webcam und aktuelle Schneebericht</h2>
 		<p>Diese Daten werden vom Server des Seibelseckle abgerufen. Dabei fällt dort technisch bedingt die IP Adresse an.</p>
