update spam mail explanation

--- a/site/index.html
+++ b/site/index.html
@@ -145,7 +145,7 @@
       <h1>Noch Fragen?</h1>
       <p>Ich freue mich immer über eine Nachricht!</p>
       <p id="meltmail"></p>
-      <p>Das ist eine temporäre Mailadresse, um Spam zu vermeiden. Sie funktioniert nur heute. Sobald ein Kontakt mit mir zu Stande kommt, erhälst du natürlich eine dauerhafte Mailadresse von mir.</p>
+      <p>Das ist eine temporäre Mailadresse, um Spam zu vermeiden. Sie funktioniert nur heute. Sobald ich antworte, erhälst du natürlich eine dauerhafte Mailadresse von mir.</p>
     </div>
   </div>
    <div class="footer-bottom">
