--- a/site/impressum.html
+++ b/site/impressum.html
@@ -10,8 +10,8 @@
 
 <h2>Angaben gemäß § 5 TMG:</h2>
 Stefan Trauth,
-Alte Rathausstraße 15,
-76467 Bietigheim
+Lessingstraße 17,
+76135 Karlsruhe
 <h2>Kontakt:</h2>
 <table>
 <tbody>
