--- a/site/pollen-forecast-privacy-policy.html
+++ b/site/pollen-forecast-privacy-policy.html
@@ -46,8 +46,8 @@
 
 		<h2>Kontakt</h2>
 		Stefan Trauth,
-		Alte Rathausstraße 15,
-		76467 Bietigheim
+        Lessingstraße 17,
+        76135 Karlsruhe
 		<div id="meltmail"></div>
 	</body>
 
