--- a/site/contact-journal-privacy-policy.html
+++ b/site/contact-journal-privacy-policy.html
@@ -31,8 +31,8 @@
 
 		<h2>Impressum</h2>
 		Stefan Trauth,
-		Alte Rathausstraße 15,
-		76467 Bietigheim
+        Lessingstraße 17,
+        76135 Karlsruhe
 		<div id="meltmail"></div>
 	</body>
 
