--- a/site/impressum.html
+++ b/site/impressum.html
@@ -23,8 +23,8 @@ Lessingstraße 17,
 </table>
 <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h2>
 Stefan Trauth,
-Alte Rathausstraße 15,
-76467 Bietigheim
+Lessingstraße 17,
+76135 Karlsruhe
 <h1>Haftungsausschluss (Disclaimer)</h1>
 <h2>Haftung für Inhalte</h2>
 
@@ -45,8 +45,8 @@ Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unt
 </p>
 <p><strong>Verantwortlicher</strong></p>
 <p><span class="tsmcontroller">Stefan Trauth<br>
-Alte Rathausstraße 15<br>
-76467 Bietigheim<br>
+Lessingstraße 17<br>
+76135 Karlsruhe<br>
 Deutschland<br></span></p>
 <p><strong>Arten der verarbeiteten Daten:</strong></p>
 <p>-  Bestandsdaten (z.B., Namen, Adressen).<br>
