--- a/site/pollen-forecast-terms-of-service.html
+++ b/site/pollen-forecast-terms-of-service.html
@@ -20,7 +20,7 @@
 		<h1>Pollen Forecast Terms of Service</h1>
 
 		<p>Terms of Service</p>
-		<p>Your use of the Pollen Forecast service (the “Service”) is governed by this legal agreement (the “Terms”). The Service is provided by Pollen Forecast, located at Alte Rathausstraße 15, 76467 Bietigheim.</p>
+		<p>Your use of the Pollen Forecast service (the “Service”) is governed by this legal agreement (the “Terms”). The Service is provided by Pollen Forecast, located at Lessingstraße 17, 76135 Karlsruhe.</p>
 		<p>By using the Service, you are agreeing to these Terms. Please read them carefully.
 		The Service is available to you if you are 13 years of age or older. If you are 13 or older, but under the age of majority in your country of residence, you must review this agreement with your parent or guardian to make sure that you and your parent or guardian understand it. You may use the Service only if you can form a binding contract with Pollen Forecast and are not barred under any applicable laws from doing so.</p>
 		<p>Using our Service
