--- a/site/index.html
+++ b/site/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Stefan Trauth | App Entwickler, Podcaster</title>
   <link rel="stylesheet" href="css/bundle.css">
-  <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3ZBw1xU1rKptJj_0jans920.woff2" as="font" crossorigin>
-  <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v13/MTP_ySUJH_bn48VBG8sNShampu5_7CjHW5spxoeN3Vs.woff2" as="font" crossorigin>
-  <link rel="preload" href="https://fonts.gstatic.com/s/ptserif/v8/I-OtoJZa3TeyH6D9oli3iXYhjbSpvc47ee6xR_80Hnw.woff2" as="font" crossorigin>
-  <link rel="preload" href="https://fonts.gstatic.com/s/ptserif/v8/QABk9IxT-LFTJ_dQzv7xpIgp9Q8gbYrhqGlRav_IXfk.woff2" as="font" crossorigin>
+  <link rel="preload" href="fonts/cJZKeOuBrn4kERxqtaUH3ZBw1xU1rKptJj_0jans920.woff2" as="font" crossorigin>
+  <link rel="preload" href="fonts/MTP_ySUJH_bn48VBG8sNShampu5_7CjHW5spxoeN3Vs.woff2" as="font" crossorigin>
+  <link rel="preload" href="fonts/I-OtoJZa3TeyH6D9oli3iXYhjbSpvc47ee6xR_80Hnw.woff2" as="font" crossorigin>
+  <link rel="preload" href="fonts/QABk9IxT-LFTJ_dQzv7xpIgp9Q8gbYrhqGlRav_IXfk.woff2" as="font" crossorigin>
   <meta name="theme-color" content="#606ec7">
 
   <meta name="description" content="Ich entwickle Apps als Apple Developer und nehme regelmäßig neue Folgen für meinen Podcast auf. Ab und zu schreibe ich auch in mein Blog." />
