add mastodon link and remove twitter

--- a/site/index.html
+++ b/site/index.html
@@ -151,8 +151,8 @@
    <div class="footer-bottom">
     <div class="footer-icons">
       <div>
-        <a target="_blank" href="https://twitter.com/funkenstrahlen" class="footer-icon">
-          <img src="images/twitter.svg" alt="Twitter" class="footer-iconImg">
+        <a target="_blank" href="https://chaos.social/@funkenstrahlen" class="footer-icon">
+          @funkenstrahlen auf Mastodon
         </a>
       </div>
     </div>
